// <auto-generated />
using System;
using GymTracker.Infrastructure.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace GymTracker.Infrastructure.Migrations
{
    [DbContext(typeof(GymTrackerDbContext))]
    [Migration("20260207161624_AddDefaultWorkoutExercises")]
    partial class AddDefaultWorkoutExercises
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.1")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("GymTracker.Core.Entities.Exercise", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<Guid>("MuscleGroupId")
                        .HasColumnType("uuid")
                        .HasColumnName("muscle_group_id");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("name");

                    b.Property<Guid?>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_exercises");

                    b.HasIndex("MuscleGroupId")
                        .HasDatabaseName("ix_exercises_muscle_group_id");

                    b.HasIndex("UserId")
                        .HasDatabaseName("ix_exercises_user_id");

                    b.ToTable("exercises", (string)null);
                });

            modelBuilder.Entity("GymTracker.Core.Entities.MuscleCategory", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("name");

                    b.Property<Guid?>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_muscle_categories");

                    b.HasIndex("UserId")
                        .HasDatabaseName("ix_muscle_categories_user_id");

                    b.ToTable("muscle_categories", (string)null);
                });

            modelBuilder.Entity("GymTracker.Core.Entities.MuscleGroup", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<Guid>("CategoryId")
                        .HasColumnType("uuid")
                        .HasColumnName("category_id");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("name");

                    b.Property<Guid?>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_muscle_groups");

                    b.HasIndex("CategoryId")
                        .HasDatabaseName("ix_muscle_groups_category_id");

                    b.HasIndex("UserId")
                        .HasDatabaseName("ix_muscle_groups_user_id");

                    b.ToTable("muscle_groups", (string)null);
                });

            modelBuilder.Entity("GymTracker.Core.Entities.Session", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<Guid>("WorkoutId")
                        .HasColumnType("uuid")
                        .HasColumnName("workout_id");

                    b.HasKey("Id")
                        .HasName("pk_sessions");

                    b.HasIndex("WorkoutId")
                        .HasDatabaseName("ix_sessions_workout_id");

                    b.ToTable("sessions", (string)null);
                });

            modelBuilder.Entity("GymTracker.Core.Entities.SessionExercise", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<Guid>("ExerciseId")
                        .HasColumnType("uuid")
                        .HasColumnName("exercise_id");

                    b.Property<int>("ExerciseNumber")
                        .HasColumnType("integer")
                        .HasColumnName("exercise_number");

                    b.Property<Guid>("SessionId")
                        .HasColumnType("uuid")
                        .HasColumnName("session_id");

                    b.HasKey("Id")
                        .HasName("pk_session_exercises");

                    b.HasIndex("ExerciseId")
                        .HasDatabaseName("ix_session_exercises_exercise_id");

                    b.HasIndex("SessionId")
                        .HasDatabaseName("ix_session_exercises_session_id");

                    b.ToTable("session_exercises", (string)null);
                });

            modelBuilder.Entity("GymTracker.Core.Entities.Set", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<int>("Reps")
                        .HasColumnType("integer")
                        .HasColumnName("reps");

                    b.Property<Guid>("SessionExerciseId")
                        .HasColumnType("uuid")
                        .HasColumnName("session_exercise_id");

                    b.Property<int>("SetNumber")
                        .HasColumnType("integer")
                        .HasColumnName("set_number");

                    b.Property<bool>("WarmUp")
                        .HasColumnType("boolean")
                        .HasColumnName("warm_up");

                    b.Property<double>("Weight")
                        .HasColumnType("double precision")
                        .HasColumnName("weight");

                    b.HasKey("Id")
                        .HasName("pk_sets");

                    b.HasIndex("SessionExerciseId")
                        .HasDatabaseName("ix_sets_session_exercise_id");

                    b.ToTable("sets", (string)null);
                });

            modelBuilder.Entity("GymTracker.Core.Entities.User", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("email");

                    b.Property<string>("PasswordHashed")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("password_hashed");

                    b.HasKey("Id")
                        .HasName("pk_users");

                    b.HasIndex("Email")
                        .IsUnique()
                        .HasDatabaseName("ix_users_email");

                    b.ToTable("users", (string)null);
                });

            modelBuilder.Entity("GymTracker.Core.Entities.Workout", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("name");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_workouts");

                    b.HasIndex("UserId")
                        .HasDatabaseName("ix_workouts_user_id");

                    b.ToTable("workouts", (string)null);
                });

            modelBuilder.Entity("GymTracker.Core.Entities.WorkoutDefaultExercise", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<Guid>("ExerciseId")
                        .HasColumnType("uuid")
                        .HasColumnName("exercise_id");

                    b.Property<int>("ExerciseNumber")
                        .HasColumnType("integer")
                        .HasColumnName("exercise_number");

                    b.Property<Guid?>("WorkoutId")
                        .HasColumnType("uuid")
                        .HasColumnName("workout_id");

                    b.HasKey("Id")
                        .HasName("pk_workout_default_exercises");

                    b.HasIndex("ExerciseId")
                        .HasDatabaseName("ix_workout_default_exercises_exercise_id");

                    b.HasIndex("WorkoutId")
                        .HasDatabaseName("ix_workout_default_exercises_workout_id");

                    b.ToTable("workout_default_exercises", (string)null);
                });

            modelBuilder.Entity("GymTracker.Core.Entities.Exercise", b =>
                {
                    b.HasOne("GymTracker.Core.Entities.MuscleGroup", "MuscleGroup")
                        .WithMany("Exercises")
                        .HasForeignKey("MuscleGroupId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired()
                        .HasConstraintName("fk_exercises_muscle_groups_muscle_group_id");

                    b.HasOne("GymTracker.Core.Entities.User", "User")
                        .WithMany("Exercises")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .HasConstraintName("fk_exercises_users_user_id");

                    b.Navigation("MuscleGroup");

                    b.Navigation("User");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.MuscleCategory", b =>
                {
                    b.HasOne("GymTracker.Core.Entities.User", "User")
                        .WithMany("MuscleCategories")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .HasConstraintName("fk_muscle_categories_users_user_id");

                    b.Navigation("User");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.MuscleGroup", b =>
                {
                    b.HasOne("GymTracker.Core.Entities.MuscleCategory", "Category")
                        .WithMany("MuscleGroups")
                        .HasForeignKey("CategoryId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired()
                        .HasConstraintName("fk_muscle_groups_muscle_categories_category_id");

                    b.HasOne("GymTracker.Core.Entities.User", "User")
                        .WithMany("MuscleGroups")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .HasConstraintName("fk_muscle_groups_users_user_id");

                    b.Navigation("Category");

                    b.Navigation("User");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.Session", b =>
                {
                    b.HasOne("GymTracker.Core.Entities.Workout", "Workout")
                        .WithMany("Sessions")
                        .HasForeignKey("WorkoutId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_sessions_workouts_workout_id");

                    b.Navigation("Workout");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.SessionExercise", b =>
                {
                    b.HasOne("GymTracker.Core.Entities.Exercise", "Exercise")
                        .WithMany("SessionExercises")
                        .HasForeignKey("ExerciseId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired()
                        .HasConstraintName("fk_session_exercises_exercises_exercise_id");

                    b.HasOne("GymTracker.Core.Entities.Session", "Session")
                        .WithMany("SessionExercises")
                        .HasForeignKey("SessionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_session_exercises_sessions_session_id");

                    b.Navigation("Exercise");

                    b.Navigation("Session");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.Set", b =>
                {
                    b.HasOne("GymTracker.Core.Entities.SessionExercise", "SessionExercise")
                        .WithMany("Sets")
                        .HasForeignKey("SessionExerciseId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_sets_session_exercises_session_exercise_id");

                    b.Navigation("SessionExercise");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.Workout", b =>
                {
                    b.HasOne("GymTracker.Core.Entities.User", "User")
                        .WithMany("Workouts")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_workouts_users_user_id");

                    b.Navigation("User");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.WorkoutDefaultExercise", b =>
                {
                    b.HasOne("GymTracker.Core.Entities.Exercise", "Exercise")
                        .WithMany("WorkoutDefaultExercises")
                        .HasForeignKey("ExerciseId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired()
                        .HasConstraintName("fk_workout_default_exercises_exercises_exercise_id");

                    b.HasOne("GymTracker.Core.Entities.Workout", "Workout")
                        .WithMany("DefaultExercises")
                        .HasForeignKey("WorkoutId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .HasConstraintName("fk_workout_default_exercises_workouts_workout_id");

                    b.Navigation("Exercise");

                    b.Navigation("Workout");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.Exercise", b =>
                {
                    b.Navigation("SessionExercises");

                    b.Navigation("WorkoutDefaultExercises");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.MuscleCategory", b =>
                {
                    b.Navigation("MuscleGroups");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.MuscleGroup", b =>
                {
                    b.Navigation("Exercises");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.Session", b =>
                {
                    b.Navigation("SessionExercises");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.SessionExercise", b =>
                {
                    b.Navigation("Sets");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.User", b =>
                {
                    b.Navigation("Exercises");

                    b.Navigation("MuscleCategories");

                    b.Navigation("MuscleGroups");

                    b.Navigation("Workouts");
                });

            modelBuilder.Entity("GymTracker.Core.Entities.Workout", b =>
                {
                    b.Navigation("DefaultExercises");

                    b.Navigation("Sessions");
                });
#pragma warning restore 612, 618
        }
    }
}
